fix bin2dec alignment

--- a/projects/bin2dec/css/styles.css
+++ b/projects/bin2dec/css/styles.css
@@ -1,6 +1,6 @@
 .container {
 	margin: 0 auto;
-	width: 390px;
+	width: 380px;
 }
 
 h1,
